Fixed z-index & responsive popup buttons

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -128,6 +128,7 @@
 		#popup_text,
 		#popup_buttons {
 			width: 100%;
+			
 			margin: 0;
 		}
 
@@ -140,6 +141,7 @@
 			a {
 				margin: 0;
 				width: 100%;
+				height: 30px;
 			}
 		}
 	}
