--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 0;
 	bottom: 0;
-	z-index: 2;
+	z-index: 3;
 	right: -450px;
 	height: 100vh;
 	min-width: 333px;
